--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -3,7 +3,8 @@
   <% @listings.each do |listing| %>
     <div class="col-md-3">
       <div class="thumbnail">
-x        <div class="caption">
+        <%= image_tag listing.image.url %>
+        <div class="caption">
          <h3><%= listing.name %></h3>
           <p><%= number_to_currency(listing.price) %></p>
           <%= link_to 'Show', listing, class: "btn btn-link" %>
