--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -54,3 +54,10 @@ body {
     margin: 0px;
   }
 }
+
+.jumbotron {
+  background-image: url('https://dl.dropbox.com/s/64ia826z43iupye/banner.jpg?dl=0');
+  h1, h2 {
+    font-family: guardian-egyptt, georgia, serif;
+  }
+}
