--- a/app/views/orders/sales.html.erb
+++ b/app/views/orders/sales.html.erb
@@ -25,5 +25,5 @@ div class="center">
 <br>
 
 <% if user_signed_in? %>
-  <%= link_to 'New Listing', new_listing_path, class: "btn btn-link" %>
+  <%= link_to 'New Listing', new_listing_path, class: "btn btn-link", data: { no_turbolink: true } %>
 <% end %>
