--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -62,3 +62,15 @@ body {
   }
 }
 
+
+#footerme{
+  text-align: left;
+  margin-top: 70px;
+  margin-bottom: 10px;
+  border-top: 1px solid #E1E3DF;
+  border-bottom: 1px solid #E1E3DF;
+    ul{
+        list-style-type: none;     
+      }
+
+}
