--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,1 +1,49 @@
-<p>Copyright afyacy 2017</p>
+
+	<div class="row" id="footerme"> 
+	  <div class="col-md-3">
+	  	<h3>Discover and Shop</h3>
+	  	<ul>
+	  		<li>Gift card</li>
+	  		<li>Whole sale</li>
+	  		<li>Gift registries</li>
+	  		<li>For the night</li>
+	  		<li>Me and You</li>
+	  	</ul>
+	  </div>
+	  <div class="col-md-3">
+		<h3>Join the Community</h3>
+		<ul>
+	  		<li>Forums</li>
+	  		<li>Teams</li>
+	  		<li>Blog</li>
+	  		<li>Affiliates</li>
+	  		<li>Upcoming Events</li>
+	  	</ul>
+	  </div>
+	  <div class="col-md-3">
+		<h3>Let us help You</h3>
+		<ul>
+	  		<li>Your Account</li>
+	  		<li>How to earn More</li>
+	  		<li>Your Orders</li>
+	  		<li>Inside Mimie</li>	
+	  		<li>Your Purchases</li>	  		  		
+	  	</ul>
+	  </div>
+	  <div class="col-md-3">
+		<h3>Make money with Us</h3>
+		<ul>
+	  		<li>Advertise your Products</li>
+	  		<li>Become a Vendor</li>
+	  		<li>Sell Your Products</li>
+	  		<li>Learn a skill to Earn</li>
+	  		<li>Self Polish</li>
+	  	</ul>
+	  </div>
+
+	</div><!-- End of row div-->
+<div style="text-align: center;">
+	Copyright afyacy 2017
+</div>
+
+
