--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -7,7 +7,7 @@
                     <small>It's Nice to Meet You!</small>
                 </h1>
                 <p>
-                	At Mimiee, we all come to work every day because we want to solve the biggest problem in digital marketing. Everyone is guessing. Publishers don’t know what apps to build, how to monetize them, or even what to price them at. Advertisers
+                	At Jasper Software Technologies, we all come to work every day because we want to solve the biggest problem in digital marketing. Everyone is guessing. Publishers don’t know what apps to build, how to monetize them, or even what to price them at. Advertisers
                 	& brands don’t know where their target users are, how to reach them, or even how much they need to spend in order to do so. Investors aren’t sure which apps and genres are growing the quickest, and where users are really spending their time (and money).
                 	<br>
 					Throughout the history of business, people use data to make more informed decisions. Our mission at Mimiee is to make the digital market more transparent. Today we provide the most actionable web app data & insights in the industry. We want to make this data available to as many people as possible (not just the top 5%).
@@ -25,14 +25,14 @@
                 <h3>Nii Odoi Kpobi
                     <small>Team Manager</small>
                 </h3>
-                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
+                <p>I set objectives and decide what work needs to be done to meet those goals.</p>
             </div>
             <div class="col-lg-4 col-sm-6 text-center">
                 <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
                 <h3>Justice Kyabi
                     <small>Project Manager</small>
                 </h3>
-                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
+                <p>Planning, Executing, and Closing Projects are my sole responsibities.</p>
             </div>
             <div class="col-lg-4 col-sm-6 text-center">
                 <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
@@ -46,14 +46,14 @@
                 <h3>Selasi Micheal 
                     <small>Programmer</small>
                 </h3>
-                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
+                <p> I figure out the process of writing, testing, troubleshooting and maintaining the source code of all programs.</p>
             </div>
             <div class="col-lg-4 col-sm-6 text-center">
                 <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
                 <h3>Susan Alhassan
                     <small>Team Administrator</small>
                 </h3>
-                <p>What does this team member to? Keep it short! This is also a great spot for social links!</p>
+                <p>I take care of the day-to-day activities that are related to financial planning,physical distribution and logistics.</p>
             </div>
             <div class="col-lg-4 col-sm-6 text-center">
                 <img class="img-circle img-responsive img-center" src="http://placehold.it/200x200" alt="">
