Tempararily change banner

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -56,7 +56,8 @@ body {
 }
 
 .jumbotron {
-  background-image: url('https://dl.dropbox.com/s/64ia826z43iupye/banner.jpg?dl=0');
+  background-image: url('https://www.dropbox.com/s/c74cc4q9u779nbw/banner.jpg?dl=0');
+  height: 40%;
   h1, h2 {
     font-family: guardian-egyptt, georgia, serif;
   }
